# messages

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
.sqlx/: query-14e18a09f03307c59408a04484690494e8921456abda6f54d1bbbaffa5fe1404.json  query-31360656d2a3bd8b19abea33c86166b00211acecf96974adb5e1ae99945b4ffe.json  query-5d00921ac8b388b8788b9a8e925c8b7d4390ca2a0520e7d9b6e0e516da8b40e2.json  query-9f6e6d4cd4d1bdd2255fea1253f0dafc1d3579fddd20d4ee7b74a967db431aae.json  query-e0c9c73dec88ddb5673a8adf4e15a65791f71e6523dfd5683d4f8424e87a2064.json  query-f534b87d29aba2571a8a68df197a778a939e6651bc0dd57848f552bbdd68c83f.json
messages/: Cargo.toml
messages/.sqlx/: query-e660dfcb7175c5e08cbeb46da05ad92dc568d1b243a8471b419f662cfa1f04d8.json
messages/migrations/: 20250529054259_create_chat_table.down.sql  20250529054259_create_chat_table.up.sql
messages/src/: main.rs
messages_bench/: Cargo.toml
messages_bench/src/: main.rs
migrations/: 20250529054259_create_chat_table.up.sql
src/: main.rs
